# spatialos-macro

./: Cargo.toml  README.md
.github/workflows/: build.yaml
examples/: component_macro.rs  module_example.rs
src/: ast.rs  lib.rs  old_spatial_component.rs  spatial_component.rs  spatial_enum.rs  spatial_type.rs  utils.rs
src/ast/: enum.rs  field.rs  mod.rs  struct.rs  type.rs
src/utils/: copier.rs  deserializer.rs  freeer.rs  mod.rs  serializer.rs  traits.rs
src/utils/types/: composite.rs  custom.rs  mod.rs  primitive.rs
