[package]
name = "spatialos-macro"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[[example]]
name = "component_macro"

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
spatialos-sdk = { git = "https://github.com/Project-StarDust/spatialos-sdk" }