[package]
name = "spatialos-macro"
version = "0.2.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"
homepage = "https://github.com/Project-StarDust/spatialos-macro"
repository = "https://github.com/Project-StarDust/spatialos-macro"
description = "Procmacro crate used to expand SpatialOS component and types created with spatialos-codegen"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[[example]]
name = "component_macro"

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
spatialos-sdk = "0.1.2"

[patch.crates-io]
spatialos-sys = { path = '../spatialos-sys' }
